Get rid of spring-r2dbc & simplify geometry codec (#638)
* Get rid op spring-r2dbc & simplify geometry codec

Co-authored-by: Marco Simons <marco@imerce.nl>
Co-authored-by: Michel ten Voorde <michel.tenvoorde@kadaster.nl>